--- a/CashaWeb/casha-react-application/public/css/Login.css
+++ b/CashaWeb/casha-react-application/public/css/Login.css
@@ -1,5 +1,6 @@
 .Login_Wrapper {
     position: absolute;
+    margin: 0;
     top: 0;
     bottom: 0;
     width: 100%;
@@ -7,20 +8,23 @@
     background-attachment: fixed;
     background-position: 50% 50%;
     background-size: 100% 100%;
+   /* background-repeat: no-repeat;
     /*filter: blur(5px);*/
 }
 
 .Login_Image_Container {
     position: relative;
-    margin-top: 3%;
-    margin-bottom: 1%;
+    padding-top: 3%;
+    padding-bottom: 1%;
     display: flex;
     justify-content: center;
 }
 
 .Form_Input_Area_Wrapper {
-    display: flex;
-    justify-content: center;
+    /*display: flex;
+    justify-content: center;*/
+    padding-left: 20%;
+    padding-right: 20%;
 }
 
 .Login_Image_Container img {
@@ -31,13 +35,18 @@
 .Login_Input_Wrap {
     border-radius: 24px;
     background-color: #ffffff;
-    padding: 3% 6% 3% 6%;
+    padding: 30px 30px;
     margin-bottom: 2%;
 }
 
 .Input_Blocks {
     display: flex;
     justify-content: space-evenly;
+
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.3em;
     line-height: 35px;
 }
 
@@ -51,29 +60,23 @@
 }
 
 .Input_Icon img {
-    height: 100%;
-    width: 100%;
+    height: 24px;
+    width: 30px;
 }
 
 .Input_Label {
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 2.3em;
-    line-height: 35px;
-
     color: #65b016;
     margin-left: 15px;
     margin-right: 30px;
 }
 
 .Input_Input {
-    min-width: 300px;
+    min-width: 150px;
     max-width: 450px;
 }
 
 .Input_Input input {
-    min-width: 100%;
+    width: 100%;
     box-shadow: 5px 4px 4px rgba(176, 242, 92, 0.5);
     border-radius: 11px;
 }
@@ -81,28 +84,29 @@
 .Button_Wrapper {
     display: flex;
     justify-content: center;
-    width: 100%;
+   
+    
 }
 
-.Button_Block {
-    padding: 30px, 30px;
-}
-
-.Button_Block button {
+.Button_Wrapper button {
     background-color: #ffb62a;
     border-radius: 28px;
     font-family: "Roboto", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 36px;
-    padding: 5% 100px;
-    min-width: 100px;
-    max-width: 400px;
     border: none;
+    width:30%;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    
 }
 
 .Registration_Link {
 margin-top: 20px;
+padding-left: 20%;
+padding-right: 20%;
+width: 100%;
 }
 
 .Registration_Link p {
