--- a/CashaWeb/casha-react-application/public/css/Login.css
+++ b/CashaWeb/casha-react-application/public/css/Login.css
@@ -1,3 +1,10 @@
+
+@media (min-width: 600px) {
+    .Login_Wrapper {
+        font-size: 10px;
+    }
+}
+
 .Login_Wrapper {
     position: absolute;
     margin: 0;
@@ -8,8 +15,6 @@
     background-attachment: fixed;
     background-position: 50% 50%;
     background-size: 100% 100%;
-   /* background-repeat: no-repeat;
-    /*filter: blur(5px);*/
 }
 
 .Login_Image_Container {
@@ -21,8 +26,6 @@
 }
 
 .Form_Input_Area_Wrapper {
-    /*display: flex;
-    justify-content: center;*/
     padding-left: 20%;
     padding-right: 20%;
 }
@@ -50,7 +53,7 @@
     line-height: 35px;
 }
 
-.First_Input_Block{
+.First_Input_Block {
     margin-bottom: 35px;
 }
 
@@ -60,8 +63,8 @@
 }
 
 .Input_Icon img {
-    height: 24px;
-    width: 30px;
+    min-height: 17px;
+    min-width: 22px;
 }
 
 .Input_Label {
@@ -84,8 +87,6 @@
 .Button_Wrapper {
     display: flex;
     justify-content: center;
-   
-    
 }
 
 .Button_Wrapper button {
@@ -96,17 +97,16 @@
     font-weight: 400;
     font-size: 36px;
     border: none;
-    width:30%;
+    width: 30%;
     padding-top: 12px;
     padding-bottom: 12px;
-    
 }
 
 .Registration_Link {
-margin-top: 20px;
-padding-left: 20%;
-padding-right: 20%;
-width: 100%;
+    margin-top: 20px;
+    padding-left: 20%;
+    padding-right: 20%;
+    width: 100%;
 }
 
 .Registration_Link p {
@@ -118,10 +118,14 @@ width: 100%;
     color: #ffffff;
     display: flex;
     justify-content: center;
+}
 
+.Registration_Link span {
+    width: fit-content;
 }
 
 .Registration_Link a {
     font-weight: 700;
     color: #ffffff;
 }
+
