--- a/CashaWeb/casha-react-application/public/css/Login.css
+++ b/CashaWeb/casha-react-application/public/css/Login.css
@@ -1,10 +1,3 @@
-
-@media (min-width: 600px) {
-    .Login_Wrapper {
-        font-size: 10px;
-    }
-}
-
 .Login_Wrapper {
     position: absolute;
     margin: 0;
@@ -129,3 +122,109 @@
     color: #ffffff;
 }
 
+
+@media (max-width: 700px) {
+    .Login_Wrapper {
+        font-size: 10px;
+    }
+    .Form_Input_Area_Wrapper {
+        padding-top: 4%;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    
+    .Login_Image_Container img {
+        width: 15%;
+        height: 15%;
+    }
+    
+    .Login_Input_Wrap {
+        border-radius: 24px;
+        background-color: #ffffff;
+        padding: 25px 15px;
+        margin-bottom: 30px;
+    }
+    
+    .Input_Blocks {
+        display: flex;
+        justify-content: space-evenly;
+    
+        font-family: "Roboto", sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 25px;
+    }
+    
+    .First_Input_Block {
+        margin-bottom: 35px;
+    }
+    
+    .Input_Icon img {
+        min-height: 17px;
+        min-width: 22px;
+    }
+    
+    .Input_Label {
+        color: #65b016;
+        margin-left: 15px;
+        margin-right: 30px;
+    }
+    
+    .Input_Input {
+        min-width: 100px;
+        max-width: 450px;
+    }
+    
+    .Input_Input input {
+        width: 100%;
+        box-shadow: 5px 4px 4px rgba(176, 242, 92, 0.5);
+        border-radius: 11px;
+    }
+    
+    .Button_Wrapper {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .Button_Wrapper button {
+        background-color: #ffb62a;
+        border-radius: 28px;
+        font-family: "Roboto", sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 22px;
+        border: none;
+        width: 30%;
+        padding-top: 8px;
+        padding-bottom:8px;
+    }
+    
+    .Registration_Link {
+        margin-top: 20px;
+        padding-left: 10%;
+        padding-right: 10%;
+        width: 100%;
+    }
+    
+    .Registration_Link p {
+        font-family: "Roboto", sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 47px;
+        color: #ffffff;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .Registration_Link span {
+        width: fit-content;
+    }
+    
+    .Registration_Link a {
+        font-weight: 700;
+        color: #ffffff;
+    }
+
+}
