--- a/CashaWeb/casha-react-application/src/pages/loginPage/Login.css
+++ b/CashaWeb/casha-react-application/src/pages/loginPage/Login.css
@@ -4,7 +4,7 @@
     top: 0;
     bottom: 0;
     width: 100%;
-    background: url("../Img/backgroundLogin.png");
+    background: url("./img/backgroundLogin.png");
     background-attachment: fixed;
     background-position: 50% 50%;
     background-size: 100% 100%;
