change font for navbar

--- a/CashaWeb/casha-react-application/src/components/adminNavbarComponent/AdminNavbar.css
+++ b/CashaWeb/casha-react-application/src/components/adminNavbarComponent/AdminNavbar.css
@@ -33,7 +33,7 @@
     text-align: center;
     text-decoration: none;
     text-transform: none;
-    font-family: "Roboto";
+    font-family: "Roboto", sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 27px;
