--- a/CashaWeb/casha-react-application/src/pages/adminEditRecipes/AdminEditRecipes.css
+++ b/CashaWeb/casha-react-application/src/pages/adminEditRecipes/AdminEditRecipes.css
@@ -149,7 +149,7 @@ label {
     cursor: pointer;
 }
 
-.table {
+.table_admin {
     width: 100%;
     text-align: center;
     background-color: black;
