--- a/CashaWeb/casha-react-application/src/components/createProfileBlogComponent/createProfileBlog.css
+++ b/CashaWeb/casha-react-application/src/components/createProfileBlogComponent/createProfileBlog.css
@@ -20,13 +20,16 @@
 }
 .postInfo {
   display: flex;
+  margin-bottom: 10px;
 }
 .postInfo img {
-  padding-right: 10px;
-  padding-bottom: 10px;
+  width: 50px;
+  margin-right: 10px;
+  height: 50px;
+  border-radius: 50%;
 }
 .postInfo p {
-  padding: 23px 10px;
+  padding: 15px 20px;
   font-size: 20px;
   line-height: 23px;
 }
@@ -34,10 +37,14 @@
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   padding: 10px 33px;
+  margin-bottom: 10px;
 }
 .postMainInfo p {
   font-size: 20px;
   margin-bottom: 10px;
+}
+.postMainInfo .pic {
+  width: 100%;
 }
 .openReceipt {
   margin-left: 85%;
@@ -55,23 +62,23 @@
 @media (min-width: 700px) {
   .wrapperBlog {
     margin-top: 200px;
-    padding-right: 100px;
-    padding-left: 100px;
+    padding-right: 250px;
+    padding-left: 250px;
     margin-right: auto;
     margin-left: auto;
   }
   h1 {
     color: black;
-
-    font-size: 34px;
+    margin-bottom: 10px;
+    font-size: 30px;
     line-height: 45px;
   }
 }
 @media (min-width: 1440px) {
   .wrapperBlog {
     margin-top: 200px;
-    padding-right: 400px;
-    padding-left: 400px;
+    padding-right: 300px;
+    padding-left: 300px;
     margin-right: auto;
     margin-left: auto;
   }
