--- a/CashaMobile/CashaMobile/CashaMobile/Views/RegisterPage.xaml
+++ b/CashaMobile/CashaMobile/CashaMobile/Views/RegisterPage.xaml
@@ -1,12 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CashaMobile.Views.RegisterPage">
+             x:Class="CashaMobile.Views.RegisterPage"
+             BackgroundImage="login_background.jpg">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout Orientation="Vertical" Padding="30" Spacing="40">
+            <Frame BackgroundColor="White" HasShadow="False">
+                <StackLayout Orientation="Vertical" Spacing="10">
+                    <Entry x:Name="Login" Text="{Binding Login}" Placeholder="Login"   
+                           PlaceholderColor="Green" HeightRequest="40"
+                           Keyboard="Default"  
+                           TextColor="Green"/>
+                    <Entry x:Name="Password" Text="{Binding Password}" Placeholder="Password"   
+                           PlaceholderColor="Green" HeightRequest="40"   
+                           IsPassword="True"  
+                           TextColor="Green"/>
+                    <Entry x:Name="PasswordRep" Text="{Binding PasswordRep}" Placeholder="Repeat password"   
+                           PlaceholderColor="Green" HeightRequest="40"   
+                           IsPassword="True"  
+                           TextColor="Green"/>
+                </StackLayout>
+            </Frame>
+            <Button Command="{Binding SubmitCommand}" Text="Register" TextColor="Black"  
+                    FontAttributes="Bold" FontSize="Large" HorizontalOptions="FillAndExpand"  
+                    BackgroundColor="#FFB62A" />
+
+            <Button Command="{Binding ToRegisterCommand}" Text="Login" TextColor="Black"  
+                    FontAttributes="Bold" FontSize="Large" HorizontalOptions="FillAndExpand"  
+                    BackgroundColor="#FFB62A" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
