--- a/CashaMobile/CashaMobile/CashaMobile/Views/RegisterPage.xaml
+++ b/CashaMobile/CashaMobile/CashaMobile/Views/RegisterPage.xaml
@@ -15,7 +15,7 @@
                            PlaceholderColor="Green" HeightRequest="40"   
                            IsPassword="True"  
                            TextColor="Green"/>
-                    <Entry x:Name="PasswordRep" Text="{Binding PasswordRep}" Placeholder="Repeat password"   
+                    <Entry x:Name="PasswordConfirm" Text="{Binding PasswordConfirm}" Placeholder="Confirm password"   
                            PlaceholderColor="Green" HeightRequest="40"   
                            IsPassword="True"  
                            TextColor="Green"/>
