Added fuction on mobile front-end page to get RecipesCard by clicking on item in list of RecipesCard on View

--- a/CashaMobile/CashaMobile/CashaMobile/Views/RecipesByProductPage.xaml
+++ b/CashaMobile/CashaMobile/CashaMobile/Views/RecipesByProductPage.xaml
@@ -16,10 +16,11 @@
             </StackLayout>
             <ListView x:Name="listOfProducts"
                       HasUnevenRows="True"
-                      ItemsSource="{Binding RecipesCards}">
+                      ItemsSource="{Binding RecipesCards}"
+                      SelectionMode="None">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <ViewCell>
+                        <ViewCell Tapped="ViewCell_Tapped">
                             <StackLayout>
                                 <Frame Padding="15" Margin="15,0,15,0" HasShadow="True" CornerRadius="15">
                                     <StackLayout>
