--- a/CashaMobile/CashaMobile/CashaMobile/Views/RecipesPage.xaml
+++ b/CashaMobile/CashaMobile/CashaMobile/Views/RecipesPage.xaml
@@ -2,12 +2,65 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CashaMobile.Views.RecipesPage"
-             Title="Recipes">
+             Title="Recipes"
+             xmlns:helpers="clr-namespace:CashaMobile.Helpers">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <helpers:IntEnumConverter x:Key="IntEnum"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Recipes"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <StackLayout>
+                <Frame Padding="0" Margin="15" BackgroundColor="#B0F25C" HasShadow="False" CornerRadius="15" HeightRequest="40" Opacity=".7">
+                    <SearchBar BackgroundColor="Transparent" 
+                               TextColor="White" 
+                               CancelButtonColor="White"  
+                               PlaceholderColor="White"
+                               Placeholder="Search by name..."/>
+                </Frame>
+            </StackLayout>
+            <StackLayout>
+                <Picker Title="Filtre properties"
+                        TitleColor="#B0F25C"
+                        ItemsSource="{Binding FiltreValues}"
+                        SelectedIndex="{Binding Filter, Converter={StaticResource IntEnum}}">
+                </Picker>
+            </StackLayout>
+            <ListView x:Name="listOfProducts"
+                      HasUnevenRows="True"
+                      ItemsSource="{Binding RecipesCards}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout>
+                                <Frame Padding="15" Margin="15,0,15,0" HasShadow="True" CornerRadius="15">
+                                    <StackLayout>
+                                        <StackLayout>
+                                            <Label Text="{Binding RecipeName}" FontSize="18" TextColor="Black"/>
+                                        </StackLayout>
+                                        <FlexLayout Direction="Row" Wrap="Wrap" AlignItems="Center">
+                                            <!--First three products-->
+                                            <Frame CornerRadius="10" BackgroundColor="{Binding FirstProductView.BackgroundColor}" Opacity=".7" Margin="0,15,15,0">
+                                                <Label Text="{Binding FirstProductView.Name}" TextColor="Black" HorizontalOptions="Center" FontSize="16"/>
+                                            </Frame>
+                                            <Frame CornerRadius="10" BackgroundColor="{Binding SecondProductView.BackgroundColor}" Opacity=".7" Margin="0,15,15,0">
+                                                <Label Text="{Binding SecondProductView.Name}" TextColor="Black" FontSize="16"/>
+                                            </Frame>
+                                            <Frame CornerRadius="10" BackgroundColor="{Binding ThirdProductView.BackgroundColor}" Opacity=".7" Margin="0,15,15,0">
+                                                <Label Text="{Binding ThirdProductView.Name}" TextColor="Black" FontSize="16" />
+                                            </Frame>
+                                            <Frame CornerRadius="10" BackgroundColor="White" Opacity=".7" Margin="0,15,15,0" HasShadow="False" >
+                                                <Label Text="..." TextColor="Black" FontSize="18" FontAttributes="Bold"/>
+                                            </Frame>
+                                        </FlexLayout>
+                                    </StackLayout>
+                                </Frame>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
