All sewed together, and tested

--- a/CashaMobile/CashaMobile/CashaMobile/Views/RecipesPage.xaml
+++ b/CashaMobile/CashaMobile/CashaMobile/Views/RecipesPage.xaml
@@ -47,7 +47,7 @@
                       ItemsSource="{Binding RecipesCards}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <ViewCell>
+                        <ViewCell Tapped="ViewCell_Tapped">
                             <StackLayout>
                                 <Frame Padding="15" Margin="15,0,15,0" HasShadow="True" CornerRadius="15">
                                     <StackLayout>
